# swagger.json
@@ -201,15 +201,6 @@
               "format": "guid"
             },
             "x-position": 2
-          },
-          {
-            "name": "familyId",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "format": "guid"
-            },
-            "x-position": 3
           }
         ],
         "requestBody": {
@@ -222,7 +213,7 @@
             }
           },
           "required": true,
-          "x-position": 4
+          "x-position": 3
         },
         "responses": {
           "200": {
